Refactor: Move AI logic to Agent and Centralize UI Utilities
- Backend: Moved prompt/schema to ResumeAnalystAgent
- Backend: Refactored Service/Controller to use Agent
- Frontend: Created shared analysis.js util
- Frontend: Updated Vue components & Tailwind config
- Config: Installed laravel/ai SDK and Debugbar configuration

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,16 @@ reset.sh
 !/storage/app/resumes/.gitignore
 /public/storage/resumes/*
 !/public/storage/resumes/.gitignore
+
+# AI Tools & Metadata
+/.agents
+/.claude
+/.cursor
+/.junie
+/.codex
+/.mcp.json
+/boost.json
+/opencode.json
+
+/.github/skills
+
