--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "barryvdh/laravel-debugbar": "^4.0",
         "fakerphp/faker": "^1.23",
         "larastan/larastan": "^3.9",
+        "laravel/boost": "^2.1",
         "laravel/breeze": "^2.3",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
